--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link
     rel="stylesheet"
-    href="../webProject/css/style.css" />
+    href="css/style.css" />
         <title>Home - webProjects</title>
     </head>
 
